...
import com.arturborowy.brand.designsystem.typography.titleLargeEmphasized
import com.arturborowy.brand.designsystem.typography.titleSmallEmphasized
import com.arturborowy.pins.R
import com.arturborowy.pins.domain.licences.Product

object LicenceViewTag {
    const val LICENCES_LIST = "LICENCES_LIST"
    const val LICENCE_NAME = "LICENCE_NAME"
    const val LICENCE_PRODUCT_NAME = "LICENCE_PRODUCT_NAME"
    const val LICENCE_PRODUCT_COPYRIGHT = "LICENCE_PRODUCT_COPYRIGHT"
    const val LICENCE_CONTENT = "LICENCE_CONTENT"
}

...
