<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pins</string>

    <string name="main_bottom_nav_label_home">Home</string>
    <string name="main_bottom_nav_label_add">Add new</string>
    <string name="main_bottom_nav_label_list">Pins</string>

    <string name="add_trip_btn_confirm">Save</string>
    <string name="add_trip_cd_address_editing_back">Back editing</string>
    <string name="add_trip_hint_name">Type address</string>
    <string name="add_trip_hint_trip_name">Trip name</string>
    <string name="add_trip_hint_description">Your note</string>
    <string name="add_trip_hint_arrival_date">Arrival date</string>
    <string name="add_trip_hint_departure_date">Departure date</string>
    <string name="add_trip_error_internet_unavailable">You don\'t have internet connection</string>

    <string name="add_trip_btn_single_stop">Single stop</string>
    <string name="add_trip_btn_multi_stop">Multi stop</string>

    <string name="create_trip_btn_confirm">Confirm</string>
    <string name="create_trip_btn_next_stop">Next</string>
    <string name="create_trip_btn_cancel">Cancel</string>

    <string name="trip_list_header">Your trips</string>
    <string name="trip_list_header_empty">Your trips…</string>
    <string name="trip_list_footer_empty">…are empty :(</string>
    <string name="trip_list_cd_edit">Edit %s</string>
    <string name="trip_list_pattern_date_range">%s - %s</string>

    <string name="edit_trip_header">Edit trip</string>
    <string name="edit_trip_btn_delete">DELETE TRIP</string>
    <string name="edit_trip_btn_save_changes">SAVE CHANGES</string>
    <string name="edit_trip_cd_previous_stop">Previous stop</string>
    <string name="edit_trip_cd_next_stop">Next stop</string>

    <string name="settings_header">Settings</string>
    <string name="settings_section_theme">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_item_dynamic_colors">Dynamic colors</string>
    <string name="settings_item_dynamic_colors_description">Use wallpaper-based colors (Android 12+)</string>

    <string name="settings_section_about_app">About This App</string>
    <string name="settings_section_other">Other</string>

    <string name="settings_item_rate_on_store">Rate us on Play Store</string>
    <string name="settings_item_appearance">Appearance</string>
    <string name="settings_item_licences">Licences</string>
    <string name="settings_item_version">Version</string>

    <string name="licences_header">Licences</string>

    <string name="licence_copyright">Copyright %s %s</string>

    <string name="licence_apache_2.0_name">Apache Licence 2.0</string>
    <string name="licence_apache_2.0_content" translatable="false" tools:ignore="TypographyOther">Licensed under the Apache License, Version 2.0 (the "License");\n\nyou may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licences/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

    <string name="licence_mit_name">The MIT Licence (MIT)</string>
    <string name="licence_mit_content" translatable="false">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

</resources>